Fix nav item spacing - change justify-content to flex-start
- Changed from space-between to flex-start to prevent nav items from spreading
- Added margin-left: auto to nav-tools to keep search on the right
- Nav now matches original site spacing more closely

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -50,7 +50,7 @@ header nav[aria-expanded='true'] {
 @media (width >= 900px) {
   header nav {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     gap: 0 32px;
   }
 
@@ -412,6 +412,7 @@ header nav .nav-sections ul > li > ul {
 /* tools */
 header nav .nav-tools {
   grid-area: tools;
+  margin-left: auto;
 }
 
 header nav .nav-tools a {
